--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==3.1.0
+Flask_Reuploaded==1.4.0
 numpy==2.2.2
 pandas==2.2.3
 scikit_learn==1.6.1
-gunicorn==23.0.0
+tensorflow==2.18.0
+tensorflow_intel==2.18.0
